--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,8 @@
-
+{
+  "name": "AI Quote Generator",
+  "short_name": "Quotes",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#020617",
+  "theme_color": "#6366f1"
+}
